# eeg-synthgen

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  validate_classic_fsaverage.yaml
scripts/: calibrate_noise.py  diagnose_tvb.py  fetch_atlases.py  generate_dataset.py  plot_coords.py  prepare_banks.py  prepare_connectivity.py  smoke_tvb_vs_sereega.py  validate_banks.py  validate_classic_methods.py  validate_classic_methods_v2.py  validate_dataset.py  visualize_connectivity.py
synthgen/: __init__.py  config.py  pipeline_runner.py  sample.py
synthgen/acquisition/: artifacts.py  noise.py  pipeline.py  qc.py  reference.py
synthgen/analysis/: inverse_metrics.py  plotting.py  spatial.py  spectral.py  stat_tests.py
synthgen/banks/: anatomy.py  connectivity.py  leadfield.py  montage.py
synthgen/forward/: projector.py
synthgen/scenario/: sampler.py
synthgen/sources/: base.py  sereega_backend.py  sereega_matlab.py  tvb_backend.py  tvb_models.py  tvb_reservoir.py  tvb_stimulus.py
synthgen/writer/: base.py  (+1 more)
tests/: test_acquisition.py  test_analysis_spatial.py  test_analysis_spectral.py  test_analysis_stat_tests.py  test_anatomy_bank.py  test_anova_tukey.py  test_bank_physics.py  test_banks.py  test_config.py  test_connectivity_bank.py  test_interfaces.py  test_inverse_metrics.py  test_pipeline.py  test_plotting.py  test_prepare_banks.py  test_prepare_connectivity.py  test_priors.py  test_sample.py  test_sereega_backend.py  test_tvb_backend.py  test_tvb_models.py  test_tvb_reservoir.py  test_tvb_stimulus.py  test_validate_classic_metrics.py
(+6 files in other folders)
